Upgrade Java project to Java 21.